fix: status dropdown positioning on small screens

--- a/webapp/channels/src/sass/responsive/_mobile.scss
+++ b/webapp/channels/src/sass/responsive/_mobile.scss
@@ -1550,8 +1550,8 @@
         .MenuWrapper {
             .Menu {
                 .dropdown-menu {
-                    top: 35%;
-                    right: 20%;
+                    top: 100%;
+                    right: 5%;
                     left: unset;
                 }
             }
